force-app/main/default/objects/Lead/fields/Advance_Stage__c.field-meta.xml
<CustomField>
    <fullName>Advance_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advance Stage</label>
    <type>Checkbox</type>
</CustomField>