force-app/main/default/objects/Lead/fields/Advance_Stage_Score__c.field-meta.xml
<CustomField>
    <fullName>Advance_Stage_Score__c</fullName>
    <formula>IF( Advance_Stage__c , 4, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance Stage Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>