force-app/main/default/objects/Lead/fields/CopyBillingToShipping__c.field-meta.xml
<CustomField>
    <fullName>CopyBillingToShipping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will copy the billing address into shipping address</description>
    <label>CopyBillingToShipping</label>
    <type>Checkbox</type>
</CustomField>