force-app/main/default/objects/Lead/fields/Decision_Maker_Score__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Score__c</fullName>
    <formula>IF( Decision_Maker__c , 5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decision Maker Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>