force-app/main/default/objects/Lead/fields/Early_Stage__c.field-meta.xml
<CustomField>
    <fullName>Early_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Early Stage</label>
    <type>Checkbox</type>
</CustomField>