force-app/main/default/objects/Lead/fields/Early_Stage_Score__c.field-meta.xml
<CustomField>
    <fullName>Early_Stage_Score__c</fullName>
    <formula>IF( Early_Stage__c , 2, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Early Stage Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>