force-app/main/default/objects/Lead/fields/Email_CheckBox__c.field-meta.xml
<CustomField>
    <fullName>Email_CheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email CheckBox</label>
    <type>Checkbox</type>
</CustomField>