force-app/main/default/objects/Lead/fields/Influencer__c.field-meta.xml
<CustomField>
    <fullName>Influencer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Influencer</label>
    <type>Checkbox</type>
</CustomField>