force-app/main/default/objects/Lead/fields/Influencer_Score__c.field-meta.xml
<CustomField>
    <fullName>Influencer_Score__c</fullName>
    <formula>IF( Influencer__c , 4, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Influencer Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>