force-app/main/default/objects/Lead/fields/Interested_Score__c.field-meta.xml
<CustomField>
    <fullName>Interested_Score__c</fullName>
    <formula>IF( Interested__c , 5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interested Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>