force-app/main/default/objects/Lead/fields/Lead_Score_Image__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_Image__c</fullName>
    <formula>IF ( Total_Lead_Score__c   &lt; 5, IMAGE (&apos;/img/samples/stars_000.gif&apos;, &apos;0&apos;),
IF (Total_Lead_Score__c &lt; 10, IMAGE (&apos;/img/samples/stars_100.gif&apos;, &apos;1&apos;),
IF (Total_Lead_Score__c &lt; 15, IMAGE (&apos;/img/samples/stars_200.gif&apos;, &apos;2&apos;),
IF (Total_Lead_Score__c &lt; 20, IMAGE (&apos;/img/samples/stars_300.gif&apos;, &apos;3&apos;),
IF (Total_Lead_Score__c  &lt; 25, IMAGE (&apos;/img/samples/stars_400.gif&apos;, &apos;4&apos;),
IMAGE (&apos;/img/samples/stars_500.gif&apos;, &apos;5&apos;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Score Image</label>
    <type>Text</type>
</CustomField>