force-app/main/default/objects/Lead/fields/Next_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Call_Date__c</fullName>
    <description>This specifies the upcoming task due date</description>
    <inlineHelpText>Specify the upcoming call date</inlineHelpText>
    <label>Next Call Date</label>
    <type>Date</type>
</CustomField>