force-app/main/default/objects/Lead/fields/Previous_Call_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Previous_Call_Date_Time__c</fullName>
    <inlineHelpText>Depicts the previous call date and time that took place</inlineHelpText>
    <label>Previous Call Date/Time</label>
    <type>DateTime</type>
</CustomField>