force-app/main/default/objects/Lead/fields/Product_intrested_in__c.field-meta.xml
<CustomField>
    <fullName>Product_intrested_in__c</fullName>
    <inlineHelpText>Select product(s)</inlineHelpText>
    <label>Product intrested in ?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ipads</fullName>
            </value>
            <value>
                <fullName>Laptops</fullName>
            </value>
            <value>
                <fullName>Printers</fullName>
            </value>
            <value>
                <fullName>Smartphones</fullName>
            </value>
            <value>
                <fullName>Bachelor Of Science</fullName>
            </value>
            <value>
                <fullName>Bachelor Of Engineering</fullName>
            </value>
            <value>
                <fullName>Master Of Business Administration</fullName>
            </value>
            <value>
                <fullName>Master Of Business Analytics</fullName>
            </value>
            <value>
                <fullName>Master Of Supply Chain Management</fullName>
            </value>
            <value>
                <fullName>Phone Systems</fullName>
            </value>
            <value>
                <fullName>Auto Dialers</fullName>
            </value>
            <value>
                <fullName>Instant Messengers</fullName>
            </value>
            <value>
                <fullName>Performance Trackers</fullName>
            </value>
            <value>
                <fullName>Apple I Phone 14 pro</fullName>
            </value>
            <value>
                <fullName>Apple Type C Charger</fullName>
            </value>
            <value>
                <fullName>Jabra Headphone CX01</fullName>
            </value>
            <value>
                <fullName>Mobile Cover</fullName>
            </value>
            <value>
                <fullName>Screen Guard Apple</fullName>
            </value>
            <value>
                <fullName>Android and auto car play</fullName>
            </value>
            <value>
                <fullName>EV charger 11.5 kW / 48 amp</fullName>
            </value>
            <value>
                <fullName>Heavy duty roof rail</fullName>
            </value>
            <value>
                <fullName>Leather seat covers</fullName>
            </value>
            <value>
                <fullName>Lithium ion battery EV</fullName>
            </value>
            <value>
                <fullName>Pirelli P zero tyres</fullName>
            </value>
            <value>
                <fullName>Ipad</fullName>
            </value>
            <value>
                <fullName>Mac</fullName>
            </value>
            <value>
                <fullName>iPhone</fullName>
            </value>
            <value>
                <fullName>Apple Watch</fullName>
            </value>
            <value>
                <fullName>Multi Utility Vehicles</fullName>
                <isActive>false</isActive>
                <label>Multi Utility Vehicles</label>
            </value>
            <value>
                <fullName>Sedans</fullName>
                <isActive>false</isActive>
                <label>Sedans</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>