force-app/main/default/objects/Lead/fields/Prospect__c.field-meta.xml
<CustomField>
    <fullName>Prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prospect</label>
    <type>Checkbox</type>
</CustomField>