force-app/main/default/objects/Lead/fields/Prospect_Score__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Score__c</fullName>
    <formula>IF( Prospect__c , 5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>