force-app/main/default/objects/Lead/fields/Ready_to_Buy__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Buy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to Buy</label>
    <type>Checkbox</type>
</CustomField>