force-app/main/default/objects/Lead/fields/Ready_to_Buy_Score__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Buy_Score__c</fullName>
    <formula>IF( Ready_to_Buy__c , 5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready to Buy Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>