force-app/main/default/objects/Lead/fields/Reminder_in_days__c.field-meta.xml
<CustomField>
    <fullName>Reminder_in_days__c</fullName>
    <description>Displays days in a reminder call</description>
    <inlineHelpText>Select one day</inlineHelpText>
    <label>Reminder (in days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>