force-app/main/default/objects/Lead/fields/Suitable__c.field-meta.xml
<CustomField>
    <fullName>Suitable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suitable</label>
    <type>Checkbox</type>
</CustomField>