force-app/main/default/objects/Lead/fields/Suspect__c.field-meta.xml
<CustomField>
    <fullName>Suspect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspect</label>
    <type>Checkbox</type>
</CustomField>