force-app/main/default/objects/Lead/fields/Suspect_Score__c.field-meta.xml
<CustomField>
    <fullName>Suspect_Score__c</fullName>
    <formula>IF( Suspect__c , 2, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suspect Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>