force-app/main/default/objects/Lead/fields/Total_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Lead_Score__c</fullName>
    <formula>Budget_Score__c  +  Decision_Maker_Score__c  +   Influencer_Score__c   +   Prospect_Score__c   +   Suspect_Score__c  +  Advance_Stage_Score__c  +  Early_Stage_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Lead Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>