force-app/main/default/objects/Lead/fields/Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason__c</fullName>
    <description>If the lead gets unqualified then its mandatory to provide the reason.</description>
    <inlineHelpText>If the lead gets unqualified then its mandatory to provide the reason.</inlineHelpText>
    <label>Unqualified Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>