force-app/main/default/objects/Lead/fields/Update_as_per_client_call__c.field-meta.xml
<CustomField>
    <fullName>Update_as_per_client_call__c</fullName>
    <inlineHelpText>Enter the details as per the demand by the client</inlineHelpText>
    <label>Update as per client call</label>
    <type>TextArea</type>
</CustomField>