force-app/main/default/objects/Lead/fields/userEmail__c.field-meta.xml
<CustomField>
    <fullName>userEmail__c</fullName>
    <description>We are fetching Email address of Lead Owner and using it in Flow.</description>
    <formula>Owner:User.Email</formula>
    <label>userEmail</label>
    <type>Text</type>
</CustomField>