force-app/main/default/objects/Lead/recordTypes/Email.recordType-meta.xml
<RecordType>
    <fullName>Email</fullName>
    <active>true</active>
    <businessProcess>Web</businessProcess>
    <label>Email</label>
</RecordType>