force-app/main/default/objects/Lead/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <businessProcess>Web</businessProcess>
    <label>Other</label>
</RecordType>