force-app/main/default/objects/Lead/recordTypes/Web.recordType-meta.xml
<RecordType>
    <fullName>Web</fullName>
    <active>true</active>
    <businessProcess>Web</businessProcess>
    <label>Web</label>
</RecordType>