force-app/main/default/objects/Lead/validationRules/lead_backward.validationRule-meta.xml
<ValidationRule>
    <fullName>lead_backward</fullName>
    <active>true</active>
    <errorConditionFormula>CASE( Status ,
&quot;Open&quot;,1,
&quot;Contacted&quot;,2,
&quot;Unqualified&quot;,3,
&quot;Qualified&quot;,4,0)

&lt;

CASE(PRIORVALUE(Status) ,
&quot;Open&quot;,1,
&quot;Contacted&quot;,2,
&quot;Unqualified&quot;,3,
&quot;Qualified&quot;,4,0)</errorConditionFormula>
    <errorMessage>Cannot move backward</errorMessage>
</ValidationRule>