force-app/main/default/objects/Lead/validationRules/Lead_Unqualified_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Unqualified_reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status , &quot;Unqualified&quot;), ISBLANK(Unqualified_Reason__c))</errorConditionFormula>
    <errorDisplayField>Unqualified_Reason__c</errorDisplayField>
    <errorMessage>This filed can&apos;t be empty. Please fill the reason to proceed.</errorMessage>
</ValidationRule>