force-app/main/default/objects/Lead/validationRules/Mandatory_field_before_conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_field_before_conversion</fullName>
    <active>false</active>
    <description>industry and product interested fields cannot be blank</description>
    <errorConditionFormula>AND(
IsConverted = TRUE,
AND(
   ISBLANK(TEXT(Industry)),
   ISBLANK(TEXT(Product_intrested_in__c))
  ) 
)</errorConditionFormula>
    <errorMessage>Cannot convert lead until mandatory fields are checked</errorMessage>
</ValidationRule>