force-app/main/default/objects/Lead/validationRules/SubmitForApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>SubmitForApproval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(Status),
  ISPICKVAL(Status, &apos;Qualified&apos;),
  NOT(SubmitforApproval__c)
)</errorConditionFormula>
    <errorMessage>Can not Convert Lead. You Have Submit first For Approval</errorMessage>
</ValidationRule>