force-app/main/default/objects/Lead/listViews/BPO_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>BPO_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>BPO_Queue</label>
    <queue>BPO_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>