force-app/main/default/objects/Lead/listViews/Education_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Education_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Education Queue</label>
    <queue>Education_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>