force-app/main/default/objects/Lead/listViews/Lead_Open_More_Than_15_Days.listView-meta.xml
<ListView>
    <fullName>Lead_Open_More_Than_15_Days</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Lead_Age__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Age__c</field>
        <operation>greaterOrEqual</operation>
        <value>15</value>
    </filters>
    <label>Lead Open More Than 15 Days</label>
</ListView>