force-app/main/default/objects/Lead/listViews/Technology_Leads.listView-meta.xml
<ListView>
    <fullName>Technology_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Lead_Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.INDUSTRY</field>
        <operation>equals</operation>
        <value>Technology</value>
    </filters>
    <label>Technology Leads</label>
</ListView>