force-app/main/default/objects/Lead/listViews/Technology_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Technology_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Technology_Queue</label>
    <queue>Technology_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>