force-app/main/default/objects/Lead/listViews/Transportation_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Transportation_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Transportation Queue</label>
    <queue>Transportation_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>